--- a/.github/workflows/gorelease.yml
+++ b/.github/workflows/gorelease.yml
@@ -15,6 +15,4 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: ${{ matrix.go }}
-      - run: |
-          go install golang.org/x/exp/cmd/gorelease@97b1e661b5df27f4fa041362fdee6953961e595e
-          gorelease
+      - run: go list -u -m -json all
